# brazil-visible-sdk

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  biome.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml  publish.yml
docs/plans/: 2026-03-06-increment-1-core-bcb-design.md  2026-03-06-increment-1-core-bcb-plan.md  2026-03-06-increment-2-ibge-design.md
examples/: cruzamento-licitacoes-sancoes.ts  quickstart.ts
src/: cache.ts  client.ts  config.ts  download.ts  errors.ts  health.ts  index.ts  parsers.ts  types.ts
src/brazilvisible/: __init__.py
src/brazilvisible/sources/: __init__.py
src/sources/: ambiente.ts  base.ts  bcb.ts  cgu.ts  cnj.ts  datasus.ts  diarios.ts  geo.ts  governamentais.ts  ibge.ts  index.ts  inep.ts  ipea.ts  mercado.ts  outros.ts  portais.ts  previdencia.ts  receita.ts  reguladoras.ts  seguranca.ts  tesouro.ts  trabalho.ts  transportes.ts  tse.ts
tests/: cache.test.ts  client.test.ts  config.test.ts  errors.test.ts  health.test.ts  parsers.test.ts
tests/helpers/: setup.ts
tests/sources/: ambiente.test.ts  bcb.test.ts  cgu.test.ts  cnj.test.ts  datasus.test.ts  diarios.test.ts  geo.test.ts  governamentais.test.ts  ibge.test.ts  inep.test.ts  ipea.test.ts  mercado.test.ts  outros.test.ts  portais.test.ts  previdencia.test.ts  receita.test.ts  reguladoras.test.ts  seguranca.test.ts  tesouro.test.ts  trabalho.test.ts  transportes.test.ts  tse.test.ts
