[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brazilvisible"
version = "0.1.0"
description = "SDK Python unificado para acesso a 93+ fontes de dados publicos brasileiros"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Brazil Visible", email = "contato@brazilvisible.org" }]
keywords = [
    "brazil",
    "dados-abertos",
    "open-data",
    "governo",
    "transparencia",
    "api",
    "ibge",
    "datasus",
    "tse",
    "receita-federal",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pandas>=2.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
geo = ["geopandas>=0.14", "fiona>=1.9"]
datasus = ["pysus>=0.14"]
cli = ["tqdm>=4.66", "rich>=13.0"]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
]
all = ["brazilvisible[geo,datasus,cli]"]

[project.urls]
Homepage = "https://brazilvisible.org"
Documentation = "https://github.com/brazilvisible/brazil-visible-sdk"
Repository = "https://github.com/brazilvisible/brazil-visible-sdk"
Issues = "https://github.com/brazilvisible/brazil-visible-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/brazilvisible"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that make real network calls (deselect with '-m not integration')",
]
